<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.activities.ChooseSignIn">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimens_100dp"
        android:src="@drawable/travis_logo"
        app:srcCompat="@mipmap/travis_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/logoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimens_40dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/app_tit"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/email_option"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/dimens_32dp"
        android:layout_marginTop="@dimen/dimens_100dp"
        android:layout_marginEnd="@dimen/dimens_32dp"
        android:background="@drawable/clickable"
        android:drawableStart="@drawable/email"
        android:drawablePadding="@dimen/dimens_32dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dimens_32dp"
        android:paddingEnd="@dimen/dimens_32dp"
        android:text="@string/sign_in_with_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/google_option"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/dimens_32dp"
        android:layout_marginTop="@dimen/dimens_16dp"
        android:layout_marginEnd="@dimen/dimens_32dp"
        android:background="@drawable/cv_background"
        android:drawableStart="@drawable/gmail"
        android:drawablePadding="@dimen/dimens_32dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dimens_32dp"
        android:paddingEnd="@dimen/dimens_32dp"
        android:text="@string/sign_in_with_google"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black" />

</LinearLayout>