<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_25dp"
        android:layout_marginTop="@dimen/dimens_16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/tour_title"
        android:textColor="#1A1A1A"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_25dp"
        android:layout_marginTop="@dimen/dimens_8dp"
        android:layout_marginEnd="@dimen/dimens_25dp"
        android:background="@drawable/cv_background"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/dimen_4dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:background="@drawable/cv_background"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >

            <ImageView
                android:padding="8dp"
                android:id="@+id/image_tour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dubai" />

            <TextView
                android:id="@+id/tour_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_8dp"
                android:layout_toEndOf="@+id/image_tour"
                android:fontFamily="@font/montserrat"
                android:text="@string/tour_detail"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tour_detail"
                android:layout_marginStart="@dimen/dimens_8dp"
                android:layout_marginTop="@dimen/dimens_25dp"
                android:layout_toEndOf="@+id/image_tour"
                android:fontFamily="@font/montserrat"
                android:text="@string/price"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tour_detail"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/dimens_40dp"
                android:padding="8dp"
                android:src="@drawable/favorite_black" />

        </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>